Updated to use default authorization server

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-okta.oauth.issuer=https://dev-158606.oktapreview.com/oauth2/ausbl5n1nvDl1Tz6p0h7
-okta.oauth.audience=people-of-earth
+okta.oauth.issuer=https://dev-158606.oktapreview.com/oauth2/default
+okta.oauth.audience=api://default
 okta.oauth.clientId=0oabl213xlbMjGJYo0h7
