--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,3 +1,2 @@
-okta.oauth2.issuer=https://dev-158606.oktapreview.com/oauth2/default
-okta.oauth2.audience=api://default
-okta.oauth2.clientId=0oabl213xlbMjGJYo0h7
+okta.oauth.issuer=https://dev-158606.oktapreview.com/oauth2/default
+okta.oauth.clientId=0oabl213xlbMjGJYo0h7
